testsuite/tests/rts/ghc-debug/shouldfail/deadlock.h

void assertDoneAfterOneSecond(int * done);
void lockThenPause (int * done);
void pauseThenLock (int * done);
